--- a/service/talent-management-hr-solution.html
+++ b/service/talent-management-hr-solution.html
@@ -1171,6 +1171,99 @@
       </div>
     </section>
 
+    <!-- Training Section -->
+    <section class="visualization">
+      <div class="visualization-sides">
+        <div>
+          <h4>Deliverable</h4>
+          <h2 data-aos="fade-up" data-aos="fade-down">
+            Your career advancement toolkit
+          </h2>
+          <p data-aos="fade-up" data-aos="fade-down" class="first-p-tag">
+            We provide comprehensive resources designed to transform your professional positioning and accelerate your career growth.
+          </p>
+        </div>
+        <a class="btn-solid" href="/training.html">View more</a>
+      </div>
+
+      <div data-aos="fade-up" data-aos="fade-down" class="carousel-container">
+        <div class="card">
+          <div class="card-image-wrapper">
+            <img
+              src="/images/home/leadership-program.png"
+              alt="Leadership essentials program"
+              loading="lazy"
+            />
+            <span class="card-tag tag-training">Training</span>
+          </div>
+          <div class="card-content">
+            <div class="card-meta">
+              <span><i class="fas fa-calendar-alt"></i>Precision tools for professional advancement</span>
+              <span
+                ><i class="fas fa-map-marker-alt"></i>Digital</span
+              >
+            </div>
+            <h4>ATS-friendly CV</h4>
+            <p>
+              Powerful career development resources crafted to elevate your professional narrative
+            </p>
+            <a href="#" class="card-link"
+              >View Program <i class="fas fa-chevron-right"></i
+            ></a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image-wrapper">
+            <img
+              src="/images/home/data-analytics.png"
+              alt="Data analytics masterclass"
+              loading="lazy"
+            />
+            <span class="card-tag tag-strategy">Strategy</span>
+          </div>
+          <div class="card-content">
+            <div class="card-meta">
+              <span><i class="fas fa-calendar-alt"></i> Bi-Monthly</span>
+              <span><i class="fas fa-map-marker-alt"></i> Virtual</span>
+            </div>
+            <h4>Achievement story bank</h4>
+            <p>
+              Comprehensive materials designed to showcase your unique professional value
+            </p>
+            <a href="#" class="card-link"
+              >View Program <i class="fas fa-chevron-right"></i
+            ></a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image-wrapper">
+            <img
+              src="/images/home/project-management.png"
+              alt="Project management fundamentals"
+              loading="lazy"
+            />
+            <span class="card-tag tag-operations">Operations</span>
+          </div>
+          <div class="card-content">
+            <div class="card-meta">
+              <span><i class="fas fa-calendar-alt"></i> Quarterly</span>
+              <span><i class="fas fa-map-marker-alt"></i> On-site</span>
+            </div>
+            <h4>Project management fundamentals</h4>
+            <p>
+              Learn practical frameworks for planning, executing, and delivering
+              complex projects with precision.
+            </p>
+            <a href="#" class="card-link"
+              >View Program <i class="fas fa-chevron-right"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="faqs-section talent-faqs">
       <div class="container">
         <div class="faqs-header">
