--- a/service.html
+++ b/service.html
@@ -67,7 +67,7 @@
               <div class="mega-container">
                 <ul role="list" class="mega-col">
                   <li role="listitem" class="mega-col-list">
-                    Talent Management &amp; HR Solutions <a href="talent-management-hr-solution.html"><i class="fa-solid fa-link"></i> Explore</a>
+                    Talent Management &amp; HR Solutions <a href="service/talent-management-hr-solution.html"><i class="fa-solid fa-link"></i> Explore</a>
                   </li>
                   <ul role="list" class="accordion-content">
                     <li role="listitem">
@@ -1378,5 +1378,9 @@
     </footer>
 
     <script src="./js/script.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
